--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,9 @@ jobs:
     - name: Get dependencies
       run: go get -v -t -d ./...
 
+    - name: Validate Formatting
+      run: find . -name "*.go" | xargs gofmt -s -l
+
     - name: Build
       run: go build -v ./...
 
