--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Validate Formatting
       run: test -z $(find . -name "*.go" | xargs gofmt -s -l)
 
+    - name: go vet
+      run: go vet ./...
+
     - name: Build
       run: go build -v ./...
 
