--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,5 +32,5 @@ jobs:
       run: go test -v ./...
 
     - name: Lint Check
-      run: golint ./...
+      run: go get -u golang.org/x/lint/golint; golint ./...
 
