--- a/example/ssg.yaml
+++ b/example/ssg.yaml
@@ -1,4 +1,4 @@
 title: Test Title
 image: https://avatars2.githubusercontent.com/u/68955854
-url: https://doesntexist.com/
+url: https://doesntexist.com
 author: me
