--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,6 +31,12 @@ jobs:
     - name: Test
       run: go test -v ./...
 
+    - name: Test
+      run: ./test
+
+    - name: Validate no diffs were generated
+      run: test -z $(git status --porcelain)
+
     - name: Lint Check
       run: go get -u golang.org/x/lint/golint; golint ./...
 
