--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,7 +26,7 @@ jobs:
       run: go vet ./...
 
     - name: Build
-      run: go build -v ./...
+      run: go build -o . ./...
 
     - name: Test
       run: go test -v ./...
