--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,18 +19,24 @@ jobs:
     - name: Get dependencies
       run: go get -v -t -d ./...
 
-    - name: Validate Formatting
+    - name: Validate formatting
       run: test -z $(find . -name "*.go" | xargs gofmt -s -l)
 
     - name: go vet
       run: go vet ./...
 
     - name: Build
-      run: go build -v ./...
+      run: go build -o . ./...
 
     - name: Test
       run: go test -v ./...
 
-    - name: Lint Check
+    - name: e2e Test
+      run: ./test
+
+    - name: Validate no diffs were generated
+      run: test -z "$(git status --porcelain)"
+
+    - name: Lint check
       run: go get -u golang.org/x/lint/golint; golint ./...
 
