--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,17 +7,17 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
+    - name: Set up Go
+      uses: actions/setup-go@v5
       with:
-        go-version: ^1.13
+        go-version: 1.20
       id: go
 
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Get dependencies
-      run: go get -v -t -d ./...
+      run: go mod download
 
     - name: Validate formatting
       run: test -z $(find . -name "*.go" | xargs gofmt -s -l)
@@ -37,6 +37,7 @@ jobs:
     - name: Validate no diffs were generated
       run: test -z "$(git status --porcelain)"
 
-    - name: Lint check
-      run: go get -u golang.org/x/lint/golint; golint ./...
-
+    - name: Run golint
+      run: |
+        go install golang.org/x/lint/golint@latest
+        golint ./...
