--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -1,6 +1,6 @@
 name: BuildAndTest
 
-on: [push,pull_request]
+on: pull_request
 
 jobs:
   build:
@@ -10,7 +10,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: 1.20
+        go-version: '1.22'
       id: go
 
     - name: Check out code into the Go module directory
