--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -25,19 +25,18 @@ jobs:
     - name: go vet
       run: go vet ./...
 
+    - name: Run golint
+      run: |
+        go install golang.org/x/lint/golint@latest
+        golint ./...
+
     - name: Build
       run: go build -o . ./...
 
     - name: Test
       run: go test -v ./...
 
-    - name: e2e Test
-      run: ./test
-
-    - name: Validate no diffs were generated
-      run: test -z "$(git status --porcelain)"
-
-    - name: Run golint
+    - name: e2e Test, validate no diffs
       run: |
-        go install golang.org/x/lint/golint@latest
-        golint ./...
+        ./test
+        test -z "$(git status --porcelain)"
