--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -4,31 +4,34 @@ on: pull_request
 
 jobs:
   build:
-    name: Build
+    name: Build & Test
     runs-on: ubuntu-latest
     steps:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
         go-version: '1.22'
-      id: go
 
-    - name: Check out code into the Go module directory
+    - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Get dependencies
+    - name: Download Go modules
       run: go mod download
+
+    - name: Validate go.mod is tidy
+      run: |
+        go mod tidy
+        git diff --exit-code go.mod go.sum
+      continue-on-error: true
 
     - name: Validate formatting
       run: test -z $(find . -name "*.go" | xargs gofmt -s -l)
 
-    - name: go vet
-      run: go vet ./...
-
-    - name: Run golint
-      run: |
-        go install golang.org/x/lint/golint@latest
-        golint ./...
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v3
+      with:
+        version: v1.56
+      continue-on-error: true
 
     - name: Build
       run: go build -o . ./...
