--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -7,16 +7,11 @@ jobs:
     name: Build & Test
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go
-      uses: actions/setup-go@v5
+    - uses: actions/checkout@v4
+    - uses: actions/setup-go@v5
       with:
         go-version: '1.22'
-
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Download Go modules
-      run: go mod download
+    - run: go mod download
 
     - name: Validate go.mod is tidy
       run: |
@@ -26,12 +21,6 @@ jobs:
 
     - name: Validate formatting
       run: test -z $(find . -name "*.go" | xargs gofmt -s -l)
-
-    - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v3
-      with:
-        version: v1.56
-      continue-on-error: true
 
     - name: Build
       run: go build -o . ./...
