--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -1,7 +1,9 @@
 name: BuildAndTest
-
-on: pull_request
-
+on:
+  push:
+    branches: ['main']
+  pull_request:
+    branches: ['main']
 jobs:
   build:
     name: Build & Test
