--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,9 +1,12 @@
 name: golangci-lint
 on:
+  push:
+    branches: ['main']
   pull_request:
+    branches: ['main']
 jobs:
   golangci:
-    name: lint
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
